force-app/main/default/objects/FieloEE__Program__c/fields/FieloCRUD__StaticResources__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__StaticResources__c</fullName>
    <inlineHelpText>Names with extensions separated by comma</inlineHelpText>
    <label>CRUD Static Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>