force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ActiveContactsCalculation__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ActiveContactsCalculation__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this option for the system to create a new account when you surpass 10,000 users.</inlineHelpText>
    <label>ActiveContactsCalculation</label>
    <type>Checkbox</type>
</CustomField>