force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__AgreementView__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AgreementView__c</fullName>
    <description>This page will be the one that overwrites the standard one to show the Agreement in the Front End.</description>
    <inlineHelpText>This page will be the one that overwrites the standard one to show the Agreement in the front end.</inlineHelpText>
    <label>Agreement View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>