force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__AutomaticCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AutomaticCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Code</label>
    <type>Checkbox</type>
</CustomField>