force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__AutonumericMemberCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AutonumericMemberCode__c</fullName>
    <defaultValue>100000000000</defaultValue>
    <label>Autonumeric MemberCode</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>