force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Captcha__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Captcha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will allow a Captcha system in the members&#39; portal.</description>
    <inlineHelpText>Click here to enable Captcha. You need to create an account in a site providing a Captcha system.</inlineHelpText>
    <label>Captcha</label>
    <type>Checkbox</type>
</CustomField>