force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__CaptchaPublicKey__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CaptchaPublicKey__c</fullName>
    <description>A public key obtained at Google.</description>
    <label>Public Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>