force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ChangePasswordPage__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ChangePasswordPage__c</fullName>
    <label>Change Password Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>