force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ComponentFieldsQuery__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ComponentFieldsQuery__c</fullName>
    <label>Component Fields Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>