force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__CustomVoucherCss__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CustomVoucherCss__c</fullName>
    <inlineHelpText>Enter the CSS code to be applied to customized vouchers.</inlineHelpText>
    <label>Custom Voucher CSS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>