force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Default__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option makes this your default program.</description>
    <inlineHelpText>Chek this box if you want to make this your default program.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>