force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ExpirationMode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationMode__c</fullName>
    <inlineHelpText>Pick "None" if member inactivity will not result in the expiration of points. Pick "Total" if member inactivity will result in the expiration of the total of points. The value "Partial" allows for a number of points to expire.</inlineHelpText>
    <label>Expiration Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>