force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ExpirationPeriod__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationPeriod__c</fullName>
    <description>Number of months during which the member&#39;s points will be valid.</description>
    <inlineHelpText>Set the quantity of months that the member will have active points.</inlineHelpText>
    <label>Expiration Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>