force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Facebook__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Facebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facebook</label>
    <type>Checkbox</type>
</CustomField>