force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__FacebookAplicationId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FacebookAplicationId__c</fullName>
    <description>Your Facebook Application ID number, for Facebook integration.</description>
    <inlineHelpText>Enter your Facebook Application ID number for Facebook integration.</inlineHelpText>
    <label>Aplication Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>