force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__FacebookAplicationSecret__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FacebookAplicationSecret__c</fullName>
    <description>Your Facebook Secret Key, for Facebook integration.</description>
    <inlineHelpText>Enter your Facebook Secret Key for Facebook integration.</inlineHelpText>
    <label>Aplication Secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>