force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__FacebookRecomendationDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FacebookRecomendationDescription__c</fullName>
    <defaultValue>&#39;Join Our Loyalty Program&#39;</defaultValue>
    <inlineHelpText>Enter a description of your program that will be shown in recommendations.</inlineHelpText>
    <label>Recomendation Description</label>
    <type>TextArea</type>
</CustomField>