force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__FacebookRecomendationSubtitle__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FacebookRecomendationSubtitle__c</fullName>
    <description>The subtitle for this recomendation.</description>
    <inlineHelpText>Enter a subtitle for the recommendation.</inlineHelpText>
    <label>Recomendation Subtitle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>