force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldSet__c</fullName>
    <label>FieldSet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>