force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__FirstBuyIntencive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FirstBuyIntencive__c</fullName>
    <label>First Buy Intencive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>