force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Google__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Google__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Copy here the public key obtained at Google.</inlineHelpText>
    <label>Google</label>
    <type>Checkbox</type>
</CustomField>