force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__HTMLHeadGeneral__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__HTMLHeadGeneral__c</fullName>
    <description>Advanced HTML for head element.</description>
    <label>HTML head general</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>