force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__IdentificationCodeType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IdentificationCodeType__c</fullName>
    <inlineHelpText>Choose here to validate the Member Code during signup.</inlineHelpText>
    <label>Identification Code Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>