force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__InactiveDays__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__InactiveDays__c</fullName>
    <description>The number of days whitout generating transactions that will make a member to become inactive.</description>
    <inlineHelpText>Set the number of days a member may be without generating transactions before being inactivated.</inlineHelpText>
    <label>Member Inactivity (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>