force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__InstructionsReward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__InstructionsReward__c</fullName>
    <description>The instructions for redeeming a reward.</description>
    <inlineHelpText>Enter the instructions for redeeming a reward. It will also be shown in the vouchers.</inlineHelpText>
    <label>Reward Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>