force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Language__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>