force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Linkedin__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Linkedin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linkedin</label>
    <type>Checkbox</type>
</CustomField>