force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Locale__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Locale__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>