force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__MemberCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberCode__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Member Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>