force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__MemberCodeClasse__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberCodeClasse__c</fullName>
    <label>Member Code Classe</label>
    <length>50</length>
    <type>Text</type>
</CustomField>