force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__MetricPeriod__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MetricPeriod__c</fullName>
    <inlineHelpText>Specify the frequency of metric calculations.</inlineHelpText>
    <label>Metric Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>