force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__NewsInjectQuery__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NewsInjectQuery__c</fullName>
    <label>Content Feed Inject Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>