force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__NumberOfVoucherDigits__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NumberOfVoucherDigits__c</fullName>
    <description>The number of digits in automatic vouchers.</description>
    <inlineHelpText>Set the number of digits for the automatic vouchers.</inlineHelpText>
    <label>Number of Voucher Digits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>