force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__OneStepRegistration__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OneStepRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will enable registration in one step.</description>
    <inlineHelpText>Set if the registration is in one or two steps.</inlineHelpText>
    <label>One Step Registration</label>
    <type>Checkbox</type>
</CustomField>