force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__OpenRedemptionDays__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OpenRedemptionDays__c</fullName>
    <description>The number of days that a redemption will stay open.</description>
    <inlineHelpText>Enter the number of days during which a redemption will be open. After that time lapse,  the redemption will be deleted.</inlineHelpText>
    <label>Open Redemption Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>