force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__PackagePrefix__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PackagePrefix__c</fullName>
    <label>Package Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>