force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__PointCost__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointCost__c</fullName>
    <label>Actual Point Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>