force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RecommendPage__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RecommendPage__c</fullName>
    <label>Recommend Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>