force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RedemptionApproval__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will establish an approval process for reward redemptions.</description>
    <inlineHelpText>Check this option if you wish to establish an approval process for the redemptions.</inlineHelpText>
    <label>Request Redemption Authorization</label>
    <type>Checkbox</type>
</CustomField>