force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RedemptionView__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionView__c</fullName>
    <label>Redemption View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>