force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ReferalTransactionStep1__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ReferalTransactionStep1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will give points to members who refer new members.</description>
    <inlineHelpText>Check this box if you want to reward additional points when the referred member completes the registration (points are given to the member who referred the new one).</inlineHelpText>
    <label>Referral Incentive Step 1</label>
    <type>Checkbox</type>
</CustomField>