force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ReferalTransactionStep2__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ReferalTransactionStep2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Points given as incentive for members to complete the registration process.</description>
    <inlineHelpText>Check this box if you want to reward with points an existing member who refers someone else. The points are issued when the new member signs up.</inlineHelpText>
    <label>Referral Incentive Step 2</label>
    <type>Checkbox</type>
</CustomField>