force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RegistrationTransaction__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RegistrationTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will give points to new members for registering in the program.</description>
    <inlineHelpText>Check this option if you want to reward new members for registering.</inlineHelpText>
    <label>Registration Incentive</label>
    <type>Checkbox</type>
</CustomField>