force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RequestAutorization__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RequestAutorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will make members registration subject to an approval process.</description>
    <inlineHelpText>Define whether new member registration is subject to an approval process. By checking this option, the user establishes a workflow to approve new members.</inlineHelpText>
    <label>Request User Authorization</label>
    <type>Checkbox</type>
</CustomField>