force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RequestTransactionAuthorization__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RequestTransactionAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Transaction Authorization</label>
    <type>Checkbox</type>
</CustomField>