force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__RewardView__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RewardView__c</fullName>
    <label>Reward View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>