force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__SenderDisplayName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SenderDisplayName__c</fullName>
    <description>The sender name for all emails sent from the application.</description>
    <inlineHelpText>Enter the sender name that will be shown in all the emails sent from the application.</inlineHelpText>
    <label>Sender Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>