force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ShoppingCart__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ShoppingCart__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shopping Cart</label>
    <type>Checkbox</type>
</CustomField>