force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ShoppingCartPage__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ShoppingCartPage__c</fullName>
    <label>Shopping Cart Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>