force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ShowVoucherCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ShowVoucherCode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Voucher Code</label>
    <type>Checkbox</type>
</CustomField>