force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__SiteURL__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SiteURL__c</fullName>
    <description>The URL used to complete the registration process.</description>
    <inlineHelpText>URL of the site used to send the links to continue the registration process</inlineHelpText>
    <label>Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>