force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Step1RegistrationMessage__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Step1RegistrationMessage__c</fullName>
    <description>A message to be showed to members in the first step of registration.</description>
    <inlineHelpText>Enter a message to be shown to new members in the first step of the registration.</inlineHelpText>
    <label>Step 1 Registration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>