force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Step2RegistrationMessage__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Step2RegistrationMessage__c</fullName>
    <description>A message to be showed to members in the second step of registration.</description>
    <inlineHelpText>Enter a message that will be shown to new members in the second step of the registration.</inlineHelpText>
    <label>Step 2 Registration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>