force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__StockControl__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StockControl__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stock Control</label>
    <type>Checkbox</type>
</CustomField>