force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__TimeOutOrphanTransactions__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TimeOutOrphanTransactions__c</fullName>
    <description>The number of days after which a transaction will expire if the person who performed it does not register in your program.</description>
    <inlineHelpText>Set the time in days for transactions to expire if the member doesn&#39;t register in Fielo.</inlineHelpText>
    <label>TimeOut Orphan Transactions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>