force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TimeZone__c</fullName>
    <description>International time zone you want to set for your program.</description>
    <inlineHelpText>Set the time zone for your program.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>