force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__TransactionProcessOnline__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TransactionProcessOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkin this option will record all transactions online when they occur. If unchecked, you will have to register them offline.</description>
    <inlineHelpText>Decide if you would rather register every transaction online when it happens, or offline altogether as a pack.</inlineHelpText>
    <label>Transaction Process Online</label>
    <type>Checkbox</type>
</CustomField>