force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__Twitter__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Twitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Twitter</label>
    <type>Checkbox</type>
</CustomField>