force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__UseAgreement__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__UseAgreement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Program will have active the Agreement functionality.</description>
    <inlineHelpText>When checked, the Program will have active the Agreement functionality.</inlineHelpText>
    <label>Use Agreement</label>
    <type>Checkbox</type>
</CustomField>