force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__UserCreationClass__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__UserCreationClass__c</fullName>
    <inlineHelpText>Enter the class you want to use for reflection of the user creation process.</inlineHelpText>
    <label>User Creation Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>