force-app/main/default/objects/FieloEE__Program__c/fields/FieloEE__ValidatePointsByItem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ValidatePointsByItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Points By Item</label>
    <type>Checkbox</type>
</CustomField>