force-app/main/default/objects/FieloEE__Program__c/validationRules/FieloEE__Complete_Site_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Complete_Site_URL</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Default__c  =  FALSE &amp;&amp; FieloEE__SiteURL__c  = NULL</errorConditionFormula>
    <errorDisplayField>FieloEE__SiteURL__c</errorDisplayField>
    <errorMessage>Complete Site URL. You can find it going to Setup -&gt; Develop -&gt; Sites</errorMessage>
</ValidationRule>