force-app/main/default/objects/FieloEE__Program__c/validationRules/FieloEE__Open_Redemption_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Open_Redemption_Days</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__OpenRedemptionDays__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__OpenRedemptionDays__c</errorDisplayField>
    <errorMessage>Value cannot be negative</errorMessage>
</ValidationRule>