force-app/main/default/objects/FieloEE__Program__c/validationRules/FieloEE__Validate_Expiration_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_Expiration_Period</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__ExpirationPeriod__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__ExpirationPeriod__c</errorDisplayField>
    <errorMessage>Value cannot be negative</errorMessage>
</ValidationRule>