force-app/main/default/objects/FieloEE__Program__c/validationRules/FieloEE__Validate_Inactive_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_Inactive_Days</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__InactiveDays__c &lt; 1</errorConditionFormula>
    <errorDisplayField>FieloEE__InactiveDays__c</errorDisplayField>
    <errorMessage>Quantity should be positive</errorMessage>
</ValidationRule>