force-app/main/default/objects/FieloEE__Program__c/validationRules/FieloEE__Validate_Numer_of_voucher_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_Numer_of_voucher_digits</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__NumberOfVoucherDigits__c &lt; 4</errorConditionFormula>
    <errorDisplayField>FieloEE__NumberOfVoucherDigits__c</errorDisplayField>
    <errorMessage>Must be greater than 4 digits</errorMessage>
</ValidationRule>