force-app/main/default/objects/FieloEE__Program__c/validationRules/FieloEE__Validate_RecentRewardsDays.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_RecentRewardsDays</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__RecentRewardsDays__c &lt; 1</errorConditionFormula>
    <errorDisplayField>FieloEE__RecentRewardsDays__c</errorDisplayField>
    <errorMessage>The quantity should be positive</errorMessage>
</ValidationRule>